--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>29.0-jre</version>
@@ -82,7 +91,7 @@
 			<artifactId>cassandra</artifactId>
 			<version>${testcontainers.version}</version>
 		</dependency>
-</dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
