--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
     - 9042:9042
     volumes:
     - cassandra:/var/lib/cassandra
+  redis:
+    image: redis:6.0
+    ports:
+    - 6379:6379
+    volumes:
+    - redis:/data
 
 volumes:
   cassandra: {}
+  redis: {}
