--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<java.version>14</java.version>
 		<testcontainers.version>1.15.0-rc2</testcontainers.version>
+		<image.prefix>itzg/</image.prefix>
 	</properties>
 
 	<dependencies>
@@ -102,6 +103,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.5.2</version>
+				<configuration>
+					<from>
+						<image>openjdk:14</image>
+					</from>
+					<to>
+						<image>${image.prefix}${project.artifactId}</image>
+					</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
