--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<properties>
 		<java.version>14</java.version>
-		<testcontainers.version>1.14.3</testcontainers.version>
+		<testcontainers.version>1.15.0-rc2</testcontainers.version>
 	</properties>
 
 	<dependencies>
