Changed maven group

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.rackspace.monplat</groupId>
+	<groupId>com.rackspace.ceres</groupId>
 	<artifactId>ceres</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<description>TSDB backed by Cassandra</description>
