--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,3 +10,10 @@ ceres:
     downsample-process-period: 10s
     partitions: 4
     partitions-to-process: 0-3
+spring:
+  data:
+    cassandra:
+      local-datacenter: datacenter1
+logging:
+  level:
+    com.rackspace.ceres.app: debug
