--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     cassandra:
       keyspace-name: ceres
       schema-action: create_if_not_exists
+      local-datacenter: datacenter1
   cache:
     # we have redis, but really just want in-memory caching
     type: simple
