Added JMX config to skaffold deployment

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,10 +21,20 @@ spec:
           name: ceres
           env:
             - name: JAVA_TOOL_OPTIONS
-              value: -Xmx3G
-#              value: -XX:+PrintFlagsFinal
+              value: >
+                -XX:MaxDirectMemorySize=1G
+                -XX:NativeMemoryTracking=summary
+                -XX:FlightRecorderOptions=stackdepth=128
+                -Xmx3G
+                -Dcom.sun.management.jmxremote.local.only=false
+                -Dcom.sun.management.jmxremote.port=7091
+                -Dcom.sun.management.jmxremote.rmi.port=7091
+                -Dcom.sun.management.jmxremote.authenticate=false
+                -Dcom.sun.management.jmxremote.ssl=false
+                -Dcom.sun.management.jmxremote.host=0.0.0.0
+                -Djava.rmi.server.hostname=0.0.0.0
             - name: CERES_SERIESSETCACHESIZE
-              value: "5000000"
+              value: "2000000"
             - name: SPRING_CONFIG_ADDITIONALLOCATION
               value: /config/
             - name: SPRING_REDIS_HOST
@@ -47,7 +57,7 @@ spec:
             - name: SPRING_DATA_CASSANDRA_LOCALDATACENTER
               value: dc1
             - name: SPRING_DATA_CASSANDRA_CONTACTPOINTS
-              value: loadtest-seed-service
+              value: loadtest-dc1-service
             - name: SPRING_DATA_CASSANDRA_REQUEST_TIMEOUT
               value: 10s
           ports:
@@ -55,6 +65,8 @@ spec:
               name: http
             - containerPort: 8081
               name: actuator
+            - containerPort: 7091
+              name: jmx
           resources:
             requests:
               cpu: 5000m
