--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,6 +14,5 @@ spring:
   data:
     cassandra:
       local-datacenter: datacenter1
-logging:
-  level:
-    com.rackspace.ceres.app: debug
+  profiles:
+    include: debug
