--- a/src/main/resources/application-deployed.yml
+++ b/src/main/resources/application-deployed.yml
@@ -12,6 +12,7 @@ ceres:
     # must be multiple of max granularity width
     time-slot-width: 1h
   raw-ttl: 48h
+  series-set-cache-size: 1000000
 spring:
   data:
     cassandra:
@@ -21,6 +22,7 @@ spring:
       contact-points: ${cassandra-contact-points}
       request:
         timeout: ${cassandra-request-timeout}
+        consistency: local_quorum
   redis:
     host: ${redis-host}
     password: ${redis-password}
