Fixed naming of detailsWithoutErrors example

--- a/docs/opentsdb-subset.yaml
+++ b/docs/opentsdb-subset.yaml
@@ -97,7 +97,7 @@ paths:
                       "failed": 0,
                       "success": 5
                     }
-                detailsWithError:
+                detailsWithoutErrors:
                   value: |
                     {
                         "errors": [],
