--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
 	<properties>
 		<java.version>14</java.version>
-		<testcontainers.version>1.15.0-rc2</testcontainers.version>
+		<testcontainers.version>1.15.0</testcontainers.version>
 		<image.prefix>racker/</image.prefix>
 	</properties>
 
