Added time_slot column to data tables and time slot partitioning

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,8 +3,10 @@ ceres:
     granularities:
       - width: 1m
         ttl: 12h
+        partitionWidth: 2h
       - width: 2m
         ttl: 1d
+        partitionWidth: 4h
     time-slot-width: 2m
     last-touch-delay: 1m
     downsample-process-period: 10s
