--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 						<image>openjdk:14</image>
 					</from>
 					<to>
-						<image>registry.hub.docker.com/${docker.image.prefix}/${project.artifactId}</image>
+						<image>${image.prefix}/${project.artifactId}</image>
 					</to>
 				</configuration>
 			</plugin>
