Added code to pick calculate granularity in query api when not given

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     type: simple
   profiles:
     active: downsample, ingest, query
+    group:
+      dev:
+        - debug
 server:
   error:
     include-message: always
