test cases for dataWriteService and QueryService.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,5 +16,5 @@ spring:
   data:
     cassandra:
       local-datacenter: datacenter1
-  profiles:
-    include: debug
+#  profiles:
+#    include: debug
