--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,3 +2,15 @@ spring:
   data:
     cassandra:
       contact-points: ""
+      request:
+        timeout: 5s
+
+ceres:
+  downsample:
+    granularities:
+      - width: 1m
+        ttl: 12h
+        partitionWidth: 2h
+      - width: 2m
+        ttl: 1d
+        partitionWidth: 4h
