--- a/dev/Insomnia-workspace.yaml
+++ b/dev/Insomnia-workspace.yaml
@@ -1,6 +1,6 @@
 _type: export
 __export_format: 4
-__export_date: 2021-02-18T08:23:32.382Z
+__export_date: 2021-02-19T08:59:59.174Z
 __export_source: insomnia.desktop.app:v2020.5.2
 resources:
   - _id: req_ea9cca38d7924d218ca2b1d0831c93d7
@@ -255,9 +255,50 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
+  - _id: req_ad1355a1a28f4b749c5b14741a8986a4
+    parentId: fld_66e6cb8db3424dbca7818d28819eb2fb
+    modified: 1613725178855
+    created: 1613725147502
+    url: "{{ api_public }}/api/ddl/data"
+    name: Generate DDL
+    description: ""
+    method: GET
+    body: {}
+    parameters: []
+    headers: []
+    authentication: {}
+    metaSortKey: -1613725147502
+    isPrivate: false
+    settingStoreCookies: true
+    settingSendCookies: true
+    settingDisableRenderRequestBody: false
+    settingEncodeUrl: true
+    settingRebuildPath: true
+    settingFollowRedirects: global
+    _type: request
+  - _id: fld_66e6cb8db3424dbca7818d28819eb2fb
+    parentId: fld_35699b465e4a483a86e17a551e547425
+    modified: 1613725156581
+    created: 1613725134528
+    name: DDL
+    description: ""
+    environment: {}
+    environmentPropertyOrder: null
+    metaSortKey: -1613725134528
+    _type: request_group
+  - _id: fld_35699b465e4a483a86e17a551e547425
+    parentId: wrk_8fc4b25f197147728096ac966f73b62e
+    modified: 1612880814504
+    created: 1612880814504
+    name: DIRECT
+    description: ""
+    environment: {}
+    environmentPropertyOrder: null
+    metaSortKey: -1612880814504
+    _type: request_group
   - _id: req_34b25885a43e4256a0bdec9803a95feb
     parentId: fld_a717d0783f15465db0a5e87f120955f9
-    modified: 1613636524519
+    modified: 1613650524195
     created: 1612868616093
     url: "{{ api_public }}/api/put"
     name: Ingest Metric
@@ -282,10 +323,6 @@ resources:
       - name: Content-Type
         value: application/json
         id: pair_e8d14d12f0e54e2e8e5056ac6db56e60
-      - name: X-Auth-Token
-        value: "{{ auth_token }}"
-        description: ""
-        id: pair_63c7af33a84f480d87a0e6ad0edbea4b
     authentication: {}
     metaSortKey: -1612868616093
     isPrivate: false
@@ -305,16 +342,6 @@ resources:
     environment: {}
     environmentPropertyOrder: null
     metaSortKey: -1612868571679
-    _type: request_group
-  - _id: fld_35699b465e4a483a86e17a551e547425
-    parentId: wrk_8fc4b25f197147728096ac966f73b62e
-    modified: 1612880814504
-    created: 1612880814504
-    name: DIRECT
-    description: ""
-    environment: {}
-    environmentPropertyOrder: null
-    metaSortKey: -1612880814504
     _type: request_group
   - _id: env_db1ddaf8dc0221ac4c45bfffe6c8784ed2ac86b4
     parentId: wrk_8fc4b25f197147728096ac966f73b62e
