--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,6 +12,8 @@ ceres:
     downsample-process-period: 10s
     partitions: 4
     partitions-to-process: 0-3
+  tag-filter: truncate
+  tag-value-limit: 50
 spring:
   data:
     cassandra:
