--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,6 +7,7 @@ spring:
 ceres:
   downsample:
     downsample-process-period: 10s
+    initialProcessingDelay: 1s
     granularities:
       - width: 1m
         ttl: 12h
