--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,6 +14,7 @@ ceres:
     partitions-to-process: 0-3
   tag-filter: truncate
   tag-value-limit: 50
+  excluded-tag-keys: ["ip_address"]
 spring:
   data:
     cassandra:
