added metricGroup to request data for ingest api in README.md and Insomnia-workspace.yaml

--- a/dev/Insomnia-workspace.yaml
+++ b/dev/Insomnia-workspace.yaml
@@ -313,7 +313,8 @@ resources:
             "tenant": "t-1",
             "os": "linux",
             "host": "h-1",
-            "deployment": "prod"
+            "deployment": "prod",
+            "metricGroup": "Misc"
           },
           "timestamp": 1611244004,
           "value": 5
