added test cases for querying using metricGroup and changed metricGroup in Insomnia-workspace.yaml and README.md.

--- a/dev/Insomnia-workspace.yaml
+++ b/dev/Insomnia-workspace.yaml
@@ -308,13 +308,13 @@ resources:
       mimeType: application/json
       text: |-
         {
-          "metric": "memory_free",
+          "metric": "free",
           "tags": {
             "tenant": "t-1",
             "os": "linux",
             "host": "h-1",
             "deployment": "prod",
-            "metricGroup": "Misc"
+            "metricGroup": "memory"
           },
           "timestamp": 1611244004,
           "value": 5
