--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,8 @@ ceres:
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
+  ingest-start-time: 7
+  ingest-end-time: 1
 spring:
   data:
     cassandra:
