--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,8 +15,8 @@ ceres:
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
-  ingest-start-time: 7
-  ingest-end-time: 1
+  ingest-start-time: 7d
+  ingest-end-time: 1d
 spring:
   data:
     cassandra:
